install-usb-gui (0.0.8) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Horst Tritremmel ]
  * languge selection added/frontend
  * toram option added/frontend
  * required changes for backend ( .. -- cheatcodes ..)

 -- Horst Tritremmel <hjt@sidux.com>  Sun, 14 Oct 2007 22:04:17 +0200

install-usb-gui (0.0.7) unstable; urgency=low

  * Revert 11410, adjust new manpage to be in line with work done pre-r11410.
  * Really overhaul script, mostly code style and flow.
  * Some API incompatible changes, to force improvement from gui:
    - no more --toram, --lang or --persist options
    - no storing of exit value in tmp file
  * Merge in bits from 11410.
  * Fix broken if block.
  * Expand awk code for readability.
  * Improve awk blobs used for fdisk parsing.
  * Use LC_ALL=C when parsing external program output.
  * Remove whitespace which caused sh syntax error!
  * Pass correct device to mk_menulst, need UUID of partition not the parent
    device.

 -- Kel Modderman <kel@otaku42.de>  Sun, 14 Oct 2007 20:30:40 +1000

install-usb-gui (0.0.6) unstable; urgency=low

  [ Kel Modderman ]
  * install_fromiso_in_USB:
    - fix option with argument handling in getopts usage
    - don't hide what grub is doing, the method of hiding its output was
      suspicious anyway
    - add fromhd=LABEL= to default menu.lst template to ensure we probe only
      for the usb boot medium
    - fix x-un-i typo in copyright header
    - add valid_label() to sanitize user input
    - append a pseudorandom integer to fallback label name to help avoid
      volume label conflict
    - append arguments to script after -- break point to menu.lst
    - move trap statement to just before the main() part of script
    - remove --help output for --label, --toram and --persist. All cheatcodes
      that are wanted should be listed after --
    - fail if no distro-defaults installed
    - use FLL_MEDIA_NAME instead of self made string, we anchor the wanted