@@ -6,9 +6,14 @@ install-usb-gui (0.0.8) UNRELEASED; urgency=low
   [ Horst Tritremmel ]
   * languge selection added/frontend
   * toram option added/frontend
-  * required changes for backend ( .. -- cheatcodes ..)
 
- -- Horst Tritremmel <hjt@sidux.com>  Sun, 14 Oct 2007 22:04:17 +0200
+  [ Kel Modderman ]
+  * Catch exit value and put it into /tmp/.install_fromiso_in_USB for the gui
+    to use.
+  * --cheatcode option is impossible, it cannot accept a variable amount of
+    arguments. Use -- ${cheatcodes} instead!
+
+ -- Kel Modderman <kel@otaku42.de>  Mon, 15 Oct 2007 08:24:28 +1000
 
 install-usb-gui (0.0.7) unstable; urgency=low
 
